[bumpversion]
current_version = 4.0.1

[bumpversion:file:Makefile]
search = CURRENT_VERSION = {current_version}
replace = CURRENT_VERSION = {new_version}

[bumpversion:file:setup.cfg]
search = current_version = {current_version}
replace = current_version = {new_version}

[bumpversion:file:docs/conf.py]
search = version = release = "{current_version}"
replace = version = release = "{new_version}"

[bumpversion:file:injectable/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[flake8]
max-line-length = 89
ignore = F821,E203,E701,E704,W503
exclude = htmlcov,docs,dist,build,ci,__pycache__,.tox,.pytest_cache,.git,.eggs,pythonenv*

[metadata]
description-file = README.rst

[aliases]
test = pytest
